@@ -2,6 +2,11 @@ This NEWS file for dynrules covers a short overview about the latest changes.
 
 0.0.7 2009-03-XX
 ----------------
+C++ framework:
+  * Added missing RuleManagement::getMaxRules() method.
+  * Fixed documentation comments.
+  * RuleSet::updateWeights() method receives only a fitness argument now.
+
 Python framework:
   * Many fixes for correct Python 3.x support.
   * CLearnSystem.create_script() now can handle file names properly.
